<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_6sdp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_10sdp" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_address"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/poppins_semi_bold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_message"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:backgroundTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                app:cornerRadius="@dimen/_6sdp"
                android:backgroundTint="@color/red" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>