<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.create.view.CreateTaskFragment" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        style="@style/fragment_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5h"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/taskInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/task_information"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/fragmentAddress" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        app:hintTextColor="@color/blue"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskInfoText" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskDescriptionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:hint="@string/task_description"
        app:hintTextColor="@color/blue"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskNameInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="@dimen/_3sdp"
        app:hintAnimationEnabled="true"
        android:hint="@string/category"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionInputLayout" >

        <AutoCompleteTextView
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/blue"
            android:layout_weight="1"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/taskDateAndTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/date_time"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/categoryInputLayout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        app:srcCompat="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="@id/taskDateInputLayout"
        app:layout_constraintTop_toTopOf="@id/taskDateInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/taskDateInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskDateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_date"
        app:hintTextColor="@color/blue"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskDateAndTimeText" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/timeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        app:srcCompat="@drawable/ic_time"
        app:layout_constraintEnd_toEndOf="@id/taskTimeInputLayout"
        app:layout_constraintTop_toTopOf="@id/taskTimeInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/taskTimeInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskTimeInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_time"
        app:hintTextColor="@color/blue"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskDateInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        style="@style/button"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintBottom_toBottomOf="@id/guideline95h" />

</androidx.constraintlayout.widget.ConstraintLayout>