<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_6sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_8sdp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_8sdp" >

        <EditText
            android:id="@+id/updateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/rectangle"
            android:hint="@string/enter_your_update_here"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:backgroundTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                app:cornerRadius="@dimen/_6sdp"
                android:backgroundTint="@color/blue" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>