<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.CreateCategoryFragment" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category"
        style="@style/fragment_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5h"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toTopOf="@id/guideline5h"
        app:layout_constraintBottom_toBottomOf="@id/guideline5h" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categoryNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/category_name"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/fragmentAddress" />

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/enter_category_name"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/categoryNameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categoryColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/category_color"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/categoryName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        tools:listitem="@layout/item_category_color"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/categoryColorText"
        app:layout_constraintBottom_toTopOf="@id/createCategoryButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_category"
        style="@style/button"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintBottom_toBottomOf="@id/guideline95h" />

</androidx.constraintlayout.widget.ConstraintLayout>